# Prueba-IDS-Estephany-Tapia

./: .gitignore  PROCESS.md  README.md  mlflow.db  pyproject.toml
docs/: MODEL_CARD.md  RESUMEN_TECNICO.md
mlruns/1/5d18a7d63aea4034998856b96129838a/artifacts/: event_priors.csv  holdout_paired_diffs.csv  run_config.json
mlruns/1/5d18a7d63aea4034998856b96129838a/artifacts/deployable/: model.joblib
mlruns/1/d8461ee5b5754dada7b9515a0f64cdec/artifacts/: holdout_paired_diffs.csv  run_config.json
mlruns/1/f934cbd1becb4a50b3819546f853f5f2/artifacts/: holdout_metrics.csv  run_config.json
mlruns/1/models/m-c7fa290ae7ef443bb00e0dee1cfe552a/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  (+1 more)
notebooks/: 01_eda.ipynb  02_resultados.ipynb  03_backtest.ipynb  04_backtest_14d.ipynb
src/: __init__.py  artifacts.py  backtest.py  calendar_utils.py  config.py  data.py  features.py  metrics.py  models.py  quality.py  viz.py
src/entrenamiento/: __init__.py  models.py
src/evaluacion/: __init__.py  backtest.py  calibration.py  holdout.py  metrics.py  splits.py
src/inferencia/: __init__.py  prediccion.py
src/pipelines/: run_all.py  run_backtest.py  run_holdout.py  run_predict.py  run_train.py
src/postproceso/: __init__.py  priors.py
src/preprocesamiento/: __init__.py  calendar_utils.py  data.py  features.py  quality.py
src/seguimiento/: __init__.py  artifacts.py  mlflow_tracking.py
tests/: conftest.py  test_calibration.py  test_features.py  test_holdout.py  test_metrics.py  test_priors.py  test_splits_backtest.py
